[gd_scene load_steps=4 format=2]

[ext_resource path="res://car.gd" type="Script" id=1]
[ext_resource path="res://sprites/car.png" type="Texture" id=2]
[ext_resource path="res://sprites/rubber.png" type="Texture" id=3]

[node name="car" type="Node2D"]

script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="turning_pivot" type="Node2D" parent="." index="0"]

_sections_unfolded = [ "Transform" ]

[node name="body" type="Sprite" parent="turning_pivot" index="0"]

position = Vector2( 10, 0 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="rubber_right" type="Sprite" parent="turning_pivot/body" index="0"]

position = Vector2( -28, 19 )
z_index = -1
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="rubber_left" type="Sprite" parent="turning_pivot/body" index="1"]

position = Vector2( -28, -19 )
z_index = -1
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="pivot_right" type="Node2D" parent="turning_pivot/body" index="2"]

position = Vector2( 30, 16 )
__meta__ = {
"_edit_group_": true
}

[node name="rubber" type="Sprite" parent="turning_pivot/body/pivot_right" index="0"]

position = Vector2( 0, 4 )
z_index = -1
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="pivot_left" type="Node2D" parent="turning_pivot/body" index="3"]

position = Vector2( 29, -16 )
__meta__ = {
"_edit_group_": true
}

[node name="rubber" type="Sprite" parent="turning_pivot/body/pivot_left" index="0"]

position = Vector2( 0, -4 )
z_index = -1
texture = ExtResource( 3 )
_sections_unfolded = [ "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -50.0
margin_right = 40.0
margin_bottom = -36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Camera2D" type="Camera2D" parent="." index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}


